[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Themes_v2/MAIN_MENU/Menu_Options_Panel.tres" type="Theme" id=1]
[ext_resource path="res://src/scenes/Options.gd" type="Script" id=2]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/CheckBox.tres" type="Theme" id=3]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_24.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/Ledger_30.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/Textures_v2/MAIN_MENU/Buttons/sound_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures_v2/MAIN_MENU/Buttons/sound.png" type="Texture" id=7]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/LineEdit.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_30.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/Buttons/buttondeco.png" type="Texture" id=10]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/Buttons/buttondeco_hover.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/Buttons/buttondeco_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/Buttons/buttondeco_disabled.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonviolet_disabled.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonviolet_pressed.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonviolet.png" type="Texture" id=16]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonviolet_hover.png" type="Texture" id=17]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PanelBorders.tres" type="StyleBox" id=18]

[node name="Options" type="Panel"]
margin_left = 602.0
margin_top = 138.0
margin_right = 1251.0
margin_bottom = 926.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 29.0
margin_top = 99.0
margin_right = 616.0
margin_bottom = 668.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_bg = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_fg = Color( 0.976471, 0.882353, 0.505882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gameplay" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 42.0

[node name="furry" type="CheckBox" parent="TabContainer/Gameplay"]
margin_left = 40.0
margin_top = 182.0
margin_right = 532.0
margin_bottom = 212.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover_pressed = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "Furries"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="furry_multiple_nipples" type="CheckBox" parent="TabContainer/Gameplay"]
margin_left = 40.0
margin_top = 220.0
margin_right = 532.0
margin_bottom = 250.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover_pressed = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "Multiple Nipples on Furries"

[node name="futa_balls" type="CheckBox" parent="TabContainer/Gameplay"]
margin_left = 40.0
margin_top = 258.0
margin_right = 532.0
margin_bottom = 288.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover_pressed = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "Futas with balls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turn_based_time_flow" type="CheckBox" parent="TabContainer/Gameplay"]
margin_left = 40.0
margin_top = 298.0
margin_right = 532.0
margin_bottom = 328.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover_pressed = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "Turn Based Time Flow"

[node name="show_full_consent" type="CheckBox" parent="TabContainer/Gameplay"]
margin_left = 40.0
margin_top = 338.0
margin_right = 532.0
margin_bottom = 368.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover_pressed = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "Show Consent Details"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enable_tutorials" type="CheckBox" parent="TabContainer/Gameplay"]
margin_left = 40.0
margin_top = 378.0
margin_right = 532.0
margin_bottom = 418.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover_pressed = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "Enable Tutorials"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Gameplay"]
margin_left = 40.0
margin_top = 50.0
margin_right = 576.0
margin_bottom = 171.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="malerate" type="HSlider" parent="TabContainer/Gameplay/VBoxContainer"]
margin_right = 536.0
margin_bottom = 32.0
value = 30.0
ticks_on_borders = true

[node name="SexRates" type="Label" parent="TabContainer/Gameplay/VBoxContainer"]
margin_left = 11.0
margin_top = -24.0
margin_right = 482.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "<All the rates>"
align = 1

[node name="male_and_futa_rate" type="HSlider" parent="TabContainer/Gameplay/VBoxContainer"]
margin_top = 63.0
margin_right = 536.0
margin_bottom = 95.0
ticks_on_borders = true

[node name="Audio" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 42.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Audio"]
margin_left = 40.0
margin_top = 90.0
margin_right = 453.0
margin_bottom = 220.0
custom_constants/separation = 31
__meta__ = {
"_edit_use_anchors_": false
}

[node name="master" type="HSlider" parent="TabContainer/Audio/VBoxContainer"]
margin_right = 420.0
margin_bottom = 32.0
min_value = -40.0
max_value = 0.0
value = -20.0
ticks_on_borders = true

[node name="CheckBox" type="CheckBox" parent="TabContainer/Audio/VBoxContainer/master"]
margin_left = 449.0
margin_top = -14.0
margin_right = 503.0
margin_bottom = 40.0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 7 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/master"]
margin_left = 124.0
margin_top = -30.0
margin_right = 308.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "MASTERSOUND"
align = 1

[node name="music" type="HSlider" parent="TabContainer/Audio/VBoxContainer"]
margin_top = 63.0
margin_right = 420.0
margin_bottom = 95.0
min_value = -40.0
max_value = 0.0
ticks_on_borders = true

[node name="CheckBox" type="CheckBox" parent="TabContainer/Audio/VBoxContainer/music"]
margin_left = 449.0
margin_top = -14.0
margin_right = 503.0
margin_bottom = 40.0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 7 )
align = 2

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/music"]
margin_left = 124.0
margin_top = -30.0
margin_right = 296.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "MUSIC"
align = 1

[node name="sound" type="HSlider" parent="TabContainer/Audio/VBoxContainer"]
margin_top = 126.0
margin_right = 420.0
margin_bottom = 158.0
min_value = -40.0
max_value = 0.0
ticks_on_borders = true

[node name="CheckBox" type="CheckBox" parent="TabContainer/Audio/VBoxContainer/sound"]
margin_left = 449.0
margin_top = -14.0
margin_right = 503.0
margin_bottom = 40.0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 7 )
align = 2

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/sound"]
margin_left = 124.0
margin_top = -30.0
margin_right = 308.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "SOUND"
align = 1

[node name="Label" type="Label" parent="TabContainer/Audio"]
margin_left = 485.0
margin_top = 40.0
margin_right = 554.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "MUTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 42.0

[node name="fullscreen" type="CheckBox" parent="TabContainer/Graphics"]
margin_left = 26.0
margin_top = 14.0
margin_right = 293.0
margin_bottom = 58.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "Full Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="factors" type="CheckBox" parent="TabContainer/Graphics"]
margin_left = 26.0
margin_top = 54.0
margin_right = 293.0
margin_bottom = 98.0
hint_tooltip = "Toggle to display factors as words or numbers"
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "Factors as words"

[node name="Cheats" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 42.0

[node name="EnterCodeMenu" type="Control" parent="TabContainer/Cheats"]
margin_right = 587.0
margin_bottom = 608.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Cheats/EnterCodeMenu"]
margin_left = -29.0
margin_top = 42.0
margin_right = 620.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Enter Code"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="TabContainer/Cheats/EnterCodeMenu"]
margin_left = 137.0
margin_top = 76.0
margin_right = 453.0
margin_bottom = 116.0
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
align = 1
placeholder_text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Activate" type="TextureButton" parent="TabContainer/Cheats/EnterCodeMenu"]
margin_left = 186.149
margin_top = 139.0
margin_right = 406.149
margin_bottom = 197.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Cheats/EnterCodeMenu/Activate"]
margin_top = -2.0
margin_right = 220.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Activate"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetCode" type="TextureButton" parent="TabContainer/Cheats/EnterCodeMenu"]
margin_left = 164.0
margin_top = 540.0
margin_right = 436.0
margin_bottom = 598.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 17 )
texture_disabled = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Cheats/EnterCodeMenu/GetCode"]
margin_right = 272.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Get Code"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenCheatsMenu" type="Control" parent="TabContainer/Cheats"]
visible = false
margin_right = 587.0
margin_bottom = 608.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TabContainer/Cheats/OpenCheatsMenu"]
margin_top = 42.0
margin_right = 587.0
margin_bottom = 302.0
custom_styles/panel = ExtResource( 18 )

[node name="Label" type="Label" parent="TabContainer/Cheats/OpenCheatsMenu"]
margin_top = 42.0
margin_right = 587.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Supporter Code Activated"
align = 1
valign = 1

[node name="CheatsMenu" type="TextureButton" parent="TabContainer/Cheats/OpenCheatsMenu"]
margin_left = 186.149
margin_top = 154.0
margin_right = 406.149
margin_bottom = 212.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Cheats/OpenCheatsMenu/CheatsMenu"]
margin_top = -2.0
margin_right = 220.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Cheats Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="."]
visible = false
margin_left = 249.0
margin_top = 681.0
margin_right = 387.0
margin_bottom = 749.0

[node name="Label" type="Label" parent="CloseButton"]
margin_left = 21.0
margin_top = 26.432
margin_right = 124.0
margin_bottom = 50.432
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CLOSE"
align = 1

[node name="Label" type="Label" parent="."]
margin_right = 649.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Options"
align = 1
valign = 1
